Made aes128w_cfb128_decrypt static inline.

--- a/native_c/CMakeLists.txt
+++ b/native_c/CMakeLists.txt
@@ -426,4 +426,13 @@ set (CCM_VAESF
     target_compile_options("${LIB_NATIVE}-vaesf" PRIVATE $<$<COMPILE_LANGUAGE:C>:${VAESF_OPTIONS}> $<$<COMPILE_LANGUAGE:ASM>: ${ASM_OPTIONS} ${ASM_FLAGS}>)
     install(TARGETS "${LIB_NATIVE}-vaesf" LIBRARY DESTINATION ${PLATFORM_TARGET}/vaesf)
     target_compile_definitions("${LIB_NATIVE}-vaesf" PUBLIC BC_VAESF BC_VARIANT=\"vaesf\" BUILD_TS=\"${BUILD_TS}\")
+
+#    # Uncomment to enable test project
+#    add_executable(tryit main.c debug.h)
+#    target_link_libraries(tryit "${LIB_NATIVE}-avx")
+#    target_compile_options("tryit" PRIVATE
+#            $<$<COMPILE_LANGUAGE:C>: -g -Wpsabi -mavx -msha -maes -mpclmul -mrdrnd -mrdseed -mlzcnt -mvaes -mavx2 -mvpclmulqdq -mavx512f -mavx512bw ${OPTIONS}>
+#            )
+
+
 endif ()
