Fixed incorrect return values from native sha256 added test to assert agreement with java api.

--- a/native_c/CMakeLists.txt
+++ b/native_c/CMakeLists.txt
@@ -189,7 +189,7 @@ else ()
             set(JNI_INCLUDE_PLATFORM ${JNI_INCLUDE}/linux)
             set(PLATFORM_TARGET ${NATIVE_INSTALL_ROOT}/linux/x86_64)
             set(CMAKE_C_FLAGS "-std=c99")
-            set(OPTIONS -Wconversion -static-libgcc -z noexecstack)
+            set(OPTIONS -Wconversion -Werror=return-type -static-libgcc -z noexecstack)
             set(PROBE_OPTIONS ${OPTIMISE_FLAG} -msse4.1 ${OPTIONS})
             set(AVX_OPTIONS ${OPTIMISE_FLAG} -mavx -msha -maes -mpclmul -mrdrnd -mrdseed -mlzcnt ${OPTIONS})
             set(VAES_OPTIONS ${OPTIMISE_FLAG} -mavx -msha -maes -mpclmul -mrdrnd -mrdseed -mlzcnt -mvaes -mavx2 ${OPTIONS})
