Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ test-java21-code:
      - "apply_overlay bc-java ./"
      - "sh gettestdata.sh"
      - . cienv-11.sh
+     - "./gradlew clean core:compileJava; cd native_c; ./build_linux.sh;  cd .."
      - "./gradlew clean build compileTestJava  -x test"
      - . cienv-21
      - ant -f test21.xml
