--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,7 @@ test-java21-code:
      - "sh gettestdata.sh"
      - . cienv-11.sh
      - "./gradlew clean core:compileJava; cd native_c; ./build_linux.sh;  cd .."
-     - "./gradlew clean build compileTestJava  -x test"
+     - "./gradlew clean cleanNative withNative build compileTestJava  -x test"
      - . cienv-21
      - ant -f test21.xml
   artifacts:
