--- a/build.gradle
+++ b/build.gradle
@@ -151,7 +151,8 @@ subprojects {
 
   task('testNEON_LE', type: Test) {
     systemProperty 'bc.test.data.home', bcTestDataHome
-    maxHeapSize = "2048m"
+    maxHeapSize = "4096m"
+    minHeapSize = "2048m"
     testLogging.showStandardStreams = true
     testLogging.showCauses = true
     testLogging.showExceptions = true
@@ -169,7 +170,8 @@ subprojects {
 
   task('testVAESF', type: Test) {
     systemProperty 'bc.test.data.home', bcTestDataHome
-    maxHeapSize = "2048m"
+    maxHeapSize = "4096m"
+    minHeapSize = "2048m"
     testLogging.showStandardStreams = true
     testLogging.showCauses = true
     testLogging.showExceptions = true
@@ -186,7 +188,8 @@ subprojects {
 
   task('testVAES', type: Test) {
     systemProperty 'bc.test.data.home', bcTestDataHome
-    maxHeapSize = "2048m"
+    maxHeapSize = "4096m"
+    minHeapSize = "2048m"
     testLogging.showStandardStreams = true
     testLogging.showCauses = true
     testLogging.showExceptions = true
@@ -202,7 +205,8 @@ subprojects {
 
   task('testAVX', type: Test) {
     systemProperty 'bc.test.data.home', bcTestDataHome
-    maxHeapSize = "2048m"
+    maxHeapSize = "4096m"
+    minHeapSize = "2048m"
     testLogging.showStandardStreams = true
     testLogging.showCauses = true
     testLogging.showExceptions = true
@@ -235,7 +239,8 @@ subprojects {
             'test.full'        : 'true'
     ]
     systemProperty 'bc.test.data.home', bcTestDataHome
-    maxHeapSize = "1536m"
+    maxHeapSize = "4096m"
+    minHeapSize = "2048m"
 
     finalizedBy jacocoTestReport
 
@@ -246,7 +251,8 @@ subprojects {
 
   test {
     systemProperty 'bc.test.data.home', bcTestDataHome
-    maxHeapSize = "1536m"
+    maxHeapSize = "4096m"
+    minHeapSize = "2048m"
     testLogging.showStandardStreams = true
     testLogging.showCauses = true
     testLogging.showExceptions = true
