--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
-  - test21
   - testAVX
+  - test21
   - testVAES
   - testVAESF
   - test
@@ -25,8 +25,8 @@ test-code-avx:
     - . cienv-11.sh
     - "./gradlew clean core:compileJava; cd native_c; ./build_linux.sh;  cd .."
     - "./gradlew clean cleanNative withNative build -x test"
-    - "tmpLibDir=$(mktemp -d -t bc-jni-libs-XXXXXXXXXX)"
-    - "export LD_LIBRARY_PATH=\"$LD_LIBRARY_PATH:$tmpLibDir\""
+    - "ls -al"
+    - "./version.sh"
     - "java -Dorg.bouncycastle.native.cpu_variant=avx -cp prov/build/libs/bcprov-lts8on-`./version.sh`.jar org.bouncycastle.util.DumpInfo"
     - "./gradlew -Pskip.pqc.tests testAVX  -x test"
 
