Added SHA224 for intel.

--- a/native_c/CMakeLists.txt
+++ b/native_c/CMakeLists.txt
@@ -384,6 +384,12 @@ else ()
             intel/jni/sha256_jni.c
             )
 
+    set(SHA224
+            intel/sha/sha224.c
+            intel/sha/sha224.h
+            intel/jni/sha224_jni.c
+            )
+
     set(GCM
             intel/gcm/gcm.h
             intel/gcm/gcm.c
@@ -449,6 +455,7 @@ else ()
             ${GCM}
             ${MUL_AVX}
             ${CCM}
+            ${SHA224}
             )
     target_include_directories("${LIB_NATIVE}-avx" PUBLIC ${JNI_INCLUDES})
     target_compile_options("${LIB_NATIVE}-avx" PRIVATE $<$<COMPILE_LANGUAGE:C>:${AVX_OPTIONS}> $<$<COMPILE_LANGUAGE:ASM>: ${ASM_OPTIONS} ${ASM_FLAGS}>)
@@ -469,6 +476,7 @@ else ()
             ${GCM}
             ${MUL_AVX}
             ${CCM_VAES}
+            ${SHA224}
             )
     target_include_directories("${LIB_NATIVE}-vaes" PUBLIC ${JNI_INCLUDES})
     target_compile_options("${LIB_NATIVE}-vaes" PRIVATE $<$<COMPILE_LANGUAGE:C>:${VAES_OPTIONS}> $<$<COMPILE_LANGUAGE:ASM>: ${ASM_OPTIONS} ${ASM_FLAGS}>)
@@ -489,6 +497,7 @@ else ()
             ${GCM_VAESF}
             ${MUL_VAESF}
             ${CCM_VAESF}
+            ${SHA224}
             )
     target_include_directories("${LIB_NATIVE}-vaesf" PUBLIC ${JNI_INCLUDES})
     target_compile_options("${LIB_NATIVE}-vaesf" PRIVATE $<$<COMPILE_LANGUAGE:C>:${VAESF_OPTIONS}> $<$<COMPILE_LANGUAGE:ASM>: ${ASM_OPTIONS} ${ASM_FLAGS}>)
